# rest-fifo-queue

./: .editorconfig  Cargo.toml  README.md
src/: main.rs
