[package]
name = "rest-fifo-queue"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.6.18", features = ["tracing", "json", "macros", "headers"] }
serde = { version = "1.0.164", features = ["derive"] }
tokio = { version = "1.28.2", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
